fix bug back button on mobile

--- a/src/components/GamePlays/GamePlays.scss
+++ b/src/components/GamePlays/GamePlays.scss
@@ -2,7 +2,7 @@
 
 .gameplays{
     position: absolute;
-    top: 60%;
+    top: 58%;
     left: 0;
     width: 100%;
 
