--- a/src/components/Island/Island.scss
+++ b/src/components/Island/Island.scss
@@ -264,7 +264,7 @@ model-viewer > #ar-prompt > img {
     transform: scale(1.2);
 
     .btn-back{
-      bottom: 19%;
+      bottom: 13vh;
     }
 
     .nav-mobile-item{
